# hurd

./: .gitignore  =Maketools  AUTHORS  BUGS  ChangeLog  INSTALL  INSTALL-cross  Makeconf  Makefile  NEWS  README  README.CVS  SETUP  SOURCES.0.0  TODO  aclocal.m4  assigns  bootstrap.c  build.mk.in  build.mkcf.in  config.make.in  configure  configure.ac  configure.in  dircat.c  dircat.h  hurd.boot  main.c  main.h  mkinstalldirs  netfs.c  node.c  process.c  process.h  procfs.c  procfs.h  procfs_dir.c  procfs_dir.h  procfs_file.c  procfs_file.h  (+12 more)
acpi/: Makefile  acpi-ops.c  acpi.c  acpi.h  acpifs.c  acpifs.h  func_files.c  func_files.h  main.c  mig-mutate.h  myacpi.h  ncache.c  ncache.h  netfs_impl.c  netfs_impl.h  options.c  options.h
auth/: ChangeLog  Makefile  auth.c  auth.h  auth_mig.h  authmutations.h  mig-decls.h  mig-mutate.h
benchmarks/: ChangeLog  Makefile  forks.c
boot/: ChangeLog  Makefile  boot.c  boot_script.c  boot_script.h  frank1.ld  frankemul.ld  mach-crt0.c  mig-decls.h  mig-mutate.h  private.h  sigvec.S  syscall.S  tcattr.c  userland-boot.c  ux.c  ux.h
bsdfsck/: ChangeLog  Makefile  dir.c  fsck.h  inode.c  main.c  pass1.c  pass1b.c  pass2.c  pass3.c  pass4.c  pass5.c  preen.c  setup.c  utilities.c
config/: ChangeLog  Makefile  fstab  group  inetd.conf  login-.bash_login  login-.bashrc  login-.profile  login-README  motd  passwd  protocols  resolv.conf  root-.bash_login  root-.bashrc  root-.profile  services  shells  syslog.conf  ttys  ttys.in
console/: ChangeLog  Makefile  README.UTF8  bdf.c  bdf.h  console.c  console.h  display-drv.h  display.c  display.h  dynafont.c  dynafont.h  focus.c  focus.h  hurd.ti  input-drv.h  input.c  input.h  main.c  motd.UTF8  mutations.h  pager.c  pager.h  priv.h  vcons.c  vcons.h  vga-display.c  vga-hw.h  vga.c  vga.h
console-client/: ChangeLog  Makefile  bdf.c  bdf.h  bell.h  console.c  current-vcs.c  display.h  driver.c  driver.h  fb.c  fb.h  generic-speaker.c  input.h  kbd-repeat.c  mach-inputdev.h  ncursesw.c  pc-kbd.c  pc-mouse.c  timer.c  timer.h  trans.c  trans.h  unicode.h  vga-dynacolor.c  vga-dynacolor.h  vga-dynafont.c  vga-dynafont.h  vga-hw.h  vga-support.c  vga-support.h  vga.c
daemons/: ChangeLog  Makefile  console-run.c  getty.c  lmail.c  rc.sh  runsystem.hurd  runsystem.hurd.sh  runsystem.hurd.sh.in  runsystem.sh  runttys.c
debian/: ChangeLog  Makefile  README.Debian  TODO  changelog  conffiles  control  copyright  postinst  prerm  rc  rules  servers.boot  shlibs  shlibs.local  update-rc.d
defpager/: ChangeLog  Makefile  backing.c  defpager.c  wiring.c
devio/: ChangeLog  MAKEDEV  Makefile  dev.c  dev.h  devio.c  devpager.c  io.c  iostate.c  iostate.h  mem.c  mem.h  open.c  open.h  ptypes.h  rdwr.c  window.c  window.h
devnode/: Makefile  README  devnode.c  mig-mutate.h  util.h
doc/: .gitignore  ChangeLog  Makefile  gpl.texinfo  hurd.texi  navigating  version.texi
eth-multiplexer/: ChangeLog  Makefile  README  dead-name.c  demuxer.c  dev_stat.c  device_impl.c  ethernet.c  ethernet.h  mig-decls.h  mig-mutate.h  multiplexer.c  netfs_impl.c  netfs_impl.h  notify_impl.c  test.c  util.h  vdev.c  vdev.h
exec/: ChangeLog  Makefile  core.c  do-bunzip2.c  elfcore.c  exec.c  execmutations.h  exectrans.c  gcore.c  gzip.h  hashexec.c  hostarch.c  main.c  mig-decls.h  priv.h  tailor.h  unzip.c
ext2fs/: ChangeLog  Makefile  balloc.c  bitmap.c  devio.c  dir.c  ext2_fs.h  ext2_fs_i.h  ext2fs.c  ext2fs.h  getblk.c  hyper.c  ialloc.c  inode.c  jbd2_format.h  journal.c  journal.h  msg.c  pager.c  pokel.c  sblock.words  storeinfo.c  truncate.c  xattr.c  xattr.h  xinl.c
fatfs/: ChangeLog  Makefile  dir.c  fat.c  fat.h  fatfs.h  inode.c  main.c  node-create.c  pager.c  virt-inode.c  virt-inode.h
fstests/: ChangeLog  Makefile  fdtests.c  fstests.c  opendisk.c  timertest.c
ftpfs/: ChangeLog  Makefile  ccache.c  ccache.h  conn.c  dir.c  fs.c  ftpfs.c  ftpfs.h  host.c  ncache.c  netfs.c  node.c
hostmux/: ChangeLog  Makefile  hostmux-xinl.c  hostmux.c  hostmux.h  leaf.c  mux.c  node.c  stubs.c
hurd/: =core.defs  =pending-changes  ChangeLog  Makefile  acpi.defs  auth.defs  auth_reply.defs  auth_request.defs  configure  configure.ac  console.h  crash.defs  crash_reply.defs  default_pager.defs  default_pager_reply.defs  default_pager_types.h  exec.defs  exec_startup.defs  fs.defs  fs_notify.defs  fsys.defs  fsys_reply.defs  gensym.awk  hurd_types.defs  hurd_types.h  ifsock.defs  iioctl.defs  install-headers.in  interrupt.defs  io.defs  io_reply.defs  io_request.defs  ioctl-decode.h  ioctl-tmpl.sym  ioctl.awk  ioctl_types.defs  ioctl_types.h  ioctls.defs  kdioctl.defs  kernel_boot.defs  (+25 more)
include/: ChangeLog  Makefile  pids.h  refcount.h
init/: ChangeLog  Makefile  init.c  stubs.c  ttys.c  ttys.h
isofs/: ChangeLog  EXTENSIONS  Makefile  ext.c  inode.c  iso9660.h  isofs.h  lookup.c  main.c  pager.c  rr.c  rr.h
libbpf/: Makefile  bpf_impl.c  bpf_impl.h  queue.c  queue.h
libcons/: ChangeLog  Makefile  cons-lookup.c  cons-switch.c  cons.h  demuxer.c  dir-changed.c  extra-version.c  file-changed.c  init-init.c  init-loop.c  mutations.h  opts-std-startup.c  opts-version.c  priv.c  priv.h  vcons-add.c  vcons-close.c  vcons-destroy.c  vcons-event.c  vcons-input.c  vcons-move-mouse.c  vcons-open.c  vcons-refresh.c  vcons-remove.c  vcons-scrollback.c
libdirmgt/: ChangeLog  Makefile  dirmgt.h
libdiskfs/: =exc.c  ChangeLog  Makefile  boot-parse.c  boot-start.c  conch-fetch.c  conch-set.c  console.c  dead-name.c  demuxer.c  dev-globals.c  dev-io.c  dev-open.c  dir-chg.c  dir-clear.c  dir-init.c  dir-link.c  dir-lookup.c  dir-mkdir.c  dir-mkfile.c  dir-readdir.c  dir-rename.c  dir-renamed.c  dir-reparent.c  dir-rmdir.c  dir-unlink.c  direnter.c  dirremove.c  dirrewrite.c  disk-pager.c  diskfs-pager.h  diskfs.c  diskfs.h  extern-inline.c  extra-version.c  fhandle.h  file-access.c  file-chauthor.c  file-chflags.c  file-chg.c  (+128 more)
libfshelp/: ChangeLog  Makefile  delegate.c  exec-reauth.c  (+28 more)
libfshelp-tests/: Makefile  README  README.new_tests  fork.c  locks-tests  locks.c  race.c  test-fcntl.c  test-flock.c  test-lockf.c
(+1636 files in other folders)
