dnl Run through autoconf to create a configure script for install-headers.
AC_REVISION([$CVSid$])
AC_PREREQ(2.53)dnl		dnl Minimum Autoconf version required.
AC_INIT([GNU Hurd], [bootstrap installation of header files])
AC_CONFIG_SRCDIR([hurd_types.h])
AC_CONFIG_AUX_DIR([..])

AC_PROG_INSTALL

AC_CONFIG_FILES([install-headers])
AC_OUTPUT
